Change to a canvas and just follow the mouse for now.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <canvas class="playground"></canvas>
+  <canvas class="playground" width="500px" height="500px"></canvas>
   <script src='http://localhost:2013/socket.io/socket.io.js'></script>
   <script src='lib/adapter.js'></script>
   <script src="main.js"></script>
